Bug 96607 - [bisected] texture misrender / flicker in The Talos Principle on SKL
Summary: [bisected] texture misrender / flicker in The Talos Principle on SKL
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Jordan Justen
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-20 22:55 UTC by Grazvydas Ignotas
Modified: 2016-06-27 22:08 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
0001-i965-Skip-update_texture_surface-when-the-plane-does.patch (5.14 KB, patch)
2016-06-20 23:08 UTC, Jordan Justen
Details | Splinter Review

Description Grazvydas Ignotas 2016-06-20 22:55:52 UTC
Very similar symptoms to bug 96425 , but different cause. Turns out to be a regression:

commit 44997fc0c1cc7f24216e3b1c5d954919df946ee5
Author: Kristian Høgsberg Kristensen <kristian.h.kristensen@intel.com>
Date:   Sun May 1 21:20:02 2016 -0700

    i965: Support textures with multiple planes
    
    Reviewed-by: Jordan Justen <jordan.l.justen@intel.com>

Trace with grass incorrectly rendered on the last frame:
https://drive.google.com/file/d/0Bz8fw_SGGDzsendNRDc2U1BFdk0/view?usp=sharing

This hack seems to be enough to unbreak it:

--- a/src/mesa/drivers/dri/i965/brw_wm_surface_state.c
+++ b/src/mesa/drivers/dri/i965/brw_wm_surface_state.c
@@ -911,8 +911,8 @@ brw_update_texture_surfaces(struct brw_context *brw)
    }
 
    if (fs) {
-      update_stage_texture_surfaces(brw, fs, &brw->wm.base, false, 1);
-      update_stage_texture_surfaces(brw, fs, &brw->wm.base, false, 2);
+      //update_stage_texture_surfaces(brw, fs, &brw->wm.base, false, 1);
+      //update_stage_texture_surfaces(brw, fs, &brw->wm.base, false, 2);
    }
 
    brw->ctx.NewDriverState |= BRW_NEW_SURFACES;
Comment 1 Jordan Justen 2016-06-20 23:08:38 UTC
Created attachment 124631 [details] [review]
0001-i965-Skip-update_texture_surface-when-the-plane-does.patch

Does this patch help?
Comment 2 Grazvydas Ignotas 2016-06-20 23:31:29 UTC
It does, thanks.

A 'Reported-by:' tag would be nice for bisection and hacking efforts :)
Comment 3 Alejandro Piñeiro (freenode IRC: apinheiro) 2016-06-27 07:23:47 UTC
FWIW, the patch on comment #1 is already on master. Mentioning just in case this bug can be closed.
Comment 4 Grazvydas Ignotas 2016-06-27 22:08:44 UTC
Yes, fixed by 727a9b24933d384f5440ed4318fb720ed11d6dd1 and 367cf3a2e3e51466429a6446ef14ed398a5fb948.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.